# Echo-realtime-chat-calls-contacts-PWA-

./: .dockerignore  .env.example  .gitignore  .vercelignore  Dockerfile  LICENSE  NOTICE  README.md  docker-compose.yml  package-lock.json  package.json  render.yaml  vercel.json
.github/workflows/: cd.yml  ci.yml
.husky/: pre-commit
auth-rs/: .env.example  Cargo.toml  Dockerfile  README.md
auth-rs/src/: main.rs
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: manifest.webmanifest  offline.html  sw.js
frontend/src/: App.tsx  Background3D.tsx  main.tsx  styles.css  types.ts  vite-env.d.ts
mobile/: .gitignore  App.tsx  README.md  app.json  package-lock.json  package.json  tsconfig.json
scripts/: add-headers.js  check-services.ps1  kill-ports.js  open-expo-devtools.js  start-mongo.ps1
server/: .dockerignore  Dockerfile  README.md  index.js  package-lock.json  package.json  tsconfig.json
server/src/: db.ts  index.ts
